# OhMyWordle

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  site.webmanifest  style.css
.github/workflows/: deploy.yml
src/: app.rs  game.rs  main.rs  stats.rs  words.rs
