[package]
name = "ohmywordle"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "EventTarget",
    "KeyboardEvent",
    "InputEvent",
    "Storage",
    "Location",
    "History",
    "Url",
    "UrlSearchParams",
    "Navigator",
    "Clipboard",
    "console",
] }
js-sys = "0.3"
gloo = { version = "0.11", features = ["events", "storage", "timers", "utils"] }
gloo-utils = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"
lto = true
